Nodes: Reroute node disappear when pressing Ctrl H #112439

Closed
opened 2023-09-16 12:02:56 +02:00 by ugorek · 0 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1650/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.23

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-09-10 22:17, hash: fca8df9415b1
Worked: Never.

Short description of error
If the reroute is not connected to anything, then pressing Ctrl + H will make the reroute invisible.
2023-09-16_19.00.52.gif

Exact steps for others to reproduce the error

  1. Add reroute in nodetree using Shift + A.
  2. Press Ctrl + H.
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1650/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.23 **Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-09-10 22:17, hash: `fca8df9415b1` Worked: Never. **Short description of error** If the reroute is not connected to anything, then pressing `Ctrl + H` will make the reroute invisible. ![2023-09-16_19.00.52.gif](/attachments/add65a1b-3350-4b36-94bc-6feabdb4f8a0) **Exact steps for others to reproduce the error** 1. Add reroute in nodetree using `Shift + A`. 2. Press `Ctrl + H`.
ugorek added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-09-16 12:02:57 +02:00
Iliya Katushenock added
Module
Nodes & Physics
Status
Confirmed
Type
Bug
and removed
Status
Needs Triage
Type
Report
labels 2023-09-16 13:01:53 +02:00
Iliya Katushenock self-assigned this 2023-09-16 13:01:56 +02:00
Iliya Katushenock changed title from Should the reroute disappear when pressing `Ctrl H`? Bug? to Nodes: Reroute node disappear when pressing `Ctrl H` 2023-09-16 13:03:18 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-09-27 18:42:58 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#112439
No description provided.